--- a/public/css/backoffice_accueil.css
+++ b/public/css/backoffice_accueil.css
@@ -1,2 +1,199 @@
 @import "var.css";
 
+.main_section{
+    height: 100%;
+    width: 100%;
+    padding: 0 2%;
+    gap: 2%;
+    display: flex;
+    flex-direction: column;
+}
+.section{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.section:nth-child(1){
+    height: 10%;
+
+    .stat_card{
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: row;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        list-style: none;
+        li{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            width: 20%;
+            height: 100%;
+            border-radius: 10px;
+            border: var(--light-grey) 2px solid;
+
+            h3{
+                font-family: "Mulish", sans-serif;
+                text-align: center;
+                font-size: 1.25rem;
+                font-weight: 500;
+                color:var(--grey);
+            }
+            p{
+                font-family: "Mulish", sans-serif;
+                text-align: center;
+                font-size: 1.25rem;
+                font-weight: 700;
+                color:var(--dark-blue-grey);
+            }
+        }
+    }
+}
+.section:nth-child(2){
+    height: 40%;
+    .second_stat {
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+        grid-template-rows: 1fr;
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+        width: 100%;
+        height: 100%;
+        border: var(--light-grey) 2px solid;
+        border-radius: 10px;
+
+        .graph{
+            width: 100%;
+            height: 100%;
+        }
+        .graph_stats{
+            width: 100%;
+            height: 100%;
+
+            ul{
+                width: 100%;
+                height: 100%;
+                list-style: none;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                border-left: var(--light-grey) 2px solid;
+
+                li{
+                    height: 100%;
+                    width: 100%;
+                    border-bottom: var(--light-grey) 2px solid;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    h4{
+                        font-family: "Mulish", sans-serif;
+                        text-align: center;
+                        font-size: 1.25rem;
+                        font-weight: 500;
+                        color:var(--grey);
+                    }
+                    p{
+                        font-family: "Mulish", sans-serif;
+                        text-align: center;
+                        font-size: 1.25rem;
+                        font-weight: 700;
+                        color:var(--dark-blue-grey);
+                    }
+                }
+                li:last-child{
+                    border-bottom: none;
+                }
+            }
+        }
+    }
+
+
+
+}
+.section:nth-child(3){
+    height: 50%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 2%;
+    .task_card{
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+        border: var(--light-grey) 2px solid;
+
+        .task_card_header{
+            width: 100%;
+            height: 20%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 2%;
+
+            h3{
+                font-family: "Mulish", sans-serif;
+                font-size: 1.25rem;
+                font-weight: 500;
+                color:var(--dark-blue-grey);
+            }
+            a{
+                text-decoration: none;
+                font-family: "Mulish", sans-serif;
+                font-size: 1.25rem;
+                font-weight: 500;
+                color:var(--primary-color);
+            }
+
+        }
+        .task_card_content{
+            width: 100%;
+            height: 80%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            ul{
+                width: 100%;
+                height: 100%;
+                list-style: none;
+                display: flex;
+                justify-content: space-evenly;
+                flex-direction: column;
+                align-items: center;
+
+                li{
+                    width: 100%;
+                    height: 20%;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    padding: 0 2%;
+                    border-bottom: var(--light-grey) 2px solid;
+
+                    h4{
+                        font-family: "Mulish", sans-serif;
+                        font-size: 1.25rem;
+                        font-weight: 500;
+                        color:var(--grey);
+                    }
+                    p{
+                        font-family: "Mulish", sans-serif;
+                        font-size: 1.25rem;
+                        font-weight: 700;
+                        color:var(--dark-blue-grey);
+                    }
+                }
+                li:last-child{
+                    border-bottom: none;
+                }
+            }
+        }
+    }
+}
