--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -12,7 +12,8 @@ html{
 /*html, body{min-height:100%;}*/
 body{
     width: 100%;
-    height: 100vw;
+    min-height: 100vh;
+    height: 100vh;
 }
 main{
     width: 100vw;
@@ -310,18 +311,21 @@ section:nth-child(3){
         height: 80%;
         width: 100%;
         margin: 5% 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
         .caroussel_content{
-            width: 100%;
+            width: 50%;
             height: 100%;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
             flex-direction: row;
             gap: 5%;
-
             .caroussel_item{
                 height: 70%;
-                width:calc((100%/ 3)- 10%);
+                width:calc(70%/2);
                 border-radius: 10px;
                 box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
                 img{
@@ -342,4 +346,134 @@ section:nth-child(3){
         }
     }
 }
+section:nth-child(4){
+    height: 100vh;
+    width: 100%;
+    background-color: #f1f1f1;
+    margin-top: 10%;
+    .section_title{
+        padding-top: 10%;
+        width: 100%;
+        height: 10%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        h1{
+            font-size: 2.5em;
+            font-family: "Abel", sans-serif;
+            font-weight: 300;
+            font-style: normal;
+            color: var(--dark-blue-grey);
+        }
+        h2{
+            font-size: 1.5em;
+            font-family: "Khula", sans-serif;
+            font-weight: 200;
+            font-style: normal;
+            color: var(--dark-blue-grey);
+        }
+    }
+    .profiles{
+        height: 80%;
+        width: 100%;
+        .profiles_content{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+            gap: 5%;
+
+            .profile_item{
+                height: 70%;
+                width:calc((100%/ 4));
+                border-radius: 10px;
+                img{
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 50%;
+                }
+                h3{
+                    margin-top: 5%;
+                    font-size: 2.5em;
+                    font-family: "Khula", sans-serif;
+                    font-weight: 300;
+                    font-style: normal;
+                    color: var(--dark-blue-grey);
+                    text-align: center;
+                }
+            }
+        }
+    }
+}
+section:last-child{
+    height: 80vh;
+    width: 100%;
+    margin-top: 10%;
+    background-color: white;
+    .section_title{
+        padding-top: 10%;
+        width: 100%;
+        height: 10%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        h1{
+            font-size: 2.5em;
+            font-family: "Abel", sans-serif;
+            font-weight: 300;
+            font-style: normal;
+            color: var(--dark-blue-grey);
+        }
+        h2{
+            font-size: 1.5em;
+            font-family: "Abel", sans-serif;
+            font-weight: 200;
+            font-style: normal;
+            color: var(--dark-blue-grey);
+        }
+    }
+    .newsletter_layout{
+        width: 100%;
+        height: 90%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .newsletter {
+            height: 50%;
+            width: 30%;
+            border-radius: 10px;
+            background-color: white;
+
+            form input[type="email"]{
+                width: 100%;
+                height: 100%;
+                border: 1px solid var(--light-grey);
+                border-radius: 10px;
+                padding: 10px;
+                font-family: "Abel", sans-serif;
+                font-size: 1em;
+                margin: 1%;
+            }
+            form button {
+                width: 100%;
+                height: 100%;
+                background-color: var(--primary-color);
+                font-family: "Abel", sans-serif;
+                font-size: 1em;
+                margin: 1%;
+                padding: 10px;
+                cursor: pointer;
+                color: white;
+                border-radius: 10px;
+                border: none;
+            }
+        }
+    }
+}
+
+/**************************************************************************/
 
