--- a/public/css/register.css
+++ b/public/css/register.css
@@ -37,7 +37,7 @@ main{
 
     .title{
         width: 100%;
-        height: 20%;
+        height: 17%;
         display: flex;
         justify-content: space-evenly;
         flex-direction: column;
@@ -59,37 +59,17 @@ main{
         }
     }
     form {
-        margin-top: 5%;
         width: 100%;
-        height: 70%;
+        height: 80%;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         justify-content: center;
         align-items: center;
+        flex-wrap: wrap;
         gap: 10%;
-        .forgot {
-            width: 80%;
-            display: flex;
-            justify-content: end;
-
-            a {
-                font-family: "Inter", sans-serif;
-                font-size: 1em;
-                color: var(--primary-color);
-                font-weight: 400;
-                align-items: end;
-                text-align: end;
-                text-decoration: none;
-                transition: 0.3s;
-
-                &:hover {
-                    color: var(--opposite-color-secondary);
-                }
-            }
-        }
         .input {
-            width: 80%;
-
+            width: 40%;
+            height: 10%;
             label {
                 font-family: "Inter", sans-serif;
                 font-size: 1em;
@@ -111,7 +91,28 @@ main{
                 box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
                 outline: none;
             }
+            select{
+                width: 100%;
+                height: 100%;
+                padding: 10px;
+                border-radius: 10px;
+                border: 1px solid var(--light-grey);
+                font-size: 1.5em;
+                color: var(--dark-blue-grey);
+                font-family: "Poppins", sans-serif;
+                font-weight: 400;
+                background-color: transparent;
+                box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+                outline: none;
 
+                option{
+                    font-family: "Poppins", sans-serif;
+                    font-size: 1em;
+                    color: var(--dark-blue-grey);
+                    font-weight: 400;
+                    background-color: white;
+                }
+            }
 
         }
         .input_cta {
@@ -136,25 +137,5 @@ main{
         }
 
     }
-    .cta {
-        p{
-            font-family: "Inter", sans-serif;
-            font-size: 1em;
-            color: var(--dark-blue-grey);
-            font-weight: 400;
-            text-align: center;
-            a{
-                font-family: "Inter", sans-serif;
-                font-size: 1em;
-                color: var(--primary-color);
-                font-weight: 400;
-                text-decoration: none;
-                transition: 0.3s;
 
-                &:hover{
-                    color: var(--opposite-color-secondary);
-                }
-            }
-        }
-    }
 }
