[EDIT] header component, create a default template for web page , add a controller for the profile with the road associate , fix register and login form now fonctionnal

--- a/public/css/components_style/header.css
+++ b/public/css/components_style/header.css
@@ -1,4 +1,4 @@
-@import "var.css";
+@import "../var.css";
 header{
     background-color: white;
     border-bottom: 1px solid var(--light-grey);
@@ -21,10 +21,13 @@ nav{
         justify-content: start;
         align-items: center;
         gap: 5%;
+
         img{
             width: 35%;
             height: 35%;
+            cursor: pointer;
         }
+
     }
     .menu{
         width: 60%;
