[EDIT] little details on views, add road for travel section , add css , add LocationController for the travel with a Request, fix header missing params

--- a/public/css/components_style/footer.css
+++ b/public/css/components_style/footer.css
@@ -4,6 +4,7 @@ footer{
     height: 50vh;
     position: relative;
     bottom: 0;
+    background-color: white;
     overflow: visible;
     background-image: url("/assets/images/wave_footer.svg");
     background-size: cover;
