[ADD] now user can have a basket and reserve locations and equipments, fix some bug on ReservationRequest and the travel section generally, start prestation section with the main page, update link in landing page , add css and fix more and more bugs :)

--- a/public/css/travel/reservation_location.css
+++ b/public/css/travel/reservation_location.css
@@ -79,13 +79,19 @@ img {
                 margin-top: 2%;
 
                 .price{
-                    font-size: 1.5rem;
-                    font-weight: normal;
-                    color: var(--dark-blue-grey);
-                    font-family: "Abel", sans-serif;
                     background-color: var(--secondary-color);
                     padding: 0.5% 1%;
                     border-radius: 5px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    h3{
+                        font-size: 1.5rem;
+                        font-weight: normal;
+                        color: var(--dark-blue-grey);
+                        font-family: "Abel", sans-serif;
+
+                    }
                 }
                 .title{
                     font-size: 1.5rem;
@@ -196,6 +202,24 @@ form{
         font-family: "Abel", sans-serif;
         border-radius: 10px;
         cursor: pointer;
+    }
+}
+.postscriptum{
+    width: 100%;
+    height: 5%;
+    h3 {
+        text-align: center;
+        font-size: 1.1rem;
+        font-weight: lighter;
+        color: var(--dark-blue-grey);
+        font-family: "Abel", sans-serif;
+    }
+    p{
+        text-align: center;
+        font-size: 1rem;
+        font-weight: lighter;
+        color: var(--dark-blue-grey);
+        font-family: "Abel", sans-serif;
     }
 }
 
