--- a/public/css/components_style/header.css
+++ b/public/css/components_style/header.css
@@ -26,6 +26,7 @@ nav{
             width: 35%;
             height: 35%;
             cursor: pointer;
+            border-radius: 20%;
         }
 
     }
