--- a/public/css/travel/offers.css
+++ b/public/css/travel/offers.css
@@ -30,6 +30,34 @@
     padding: 2% 5%;
     overflow: scroll;
 
+    .admin_layout{
+        width: 100%;
+        height: 30%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+
+        button{
+            border: none;
+            width: 20%;
+            height: 30%;
+            background-color: var(--action-color-good);
+            font-family: "Abel", sans-serif;
+            font-size: 1em;
+            margin: 1%;
+            padding: 1%;
+            cursor: pointer;
+            color: white;
+            border-radius: 10px;
+        }
+        button#good{
+            background-color: var(--action-color-good);
+        }
+        button#bad{
+            background-color: var(--action-color-bad);
+        }
+    }
+
     .offer_image_layout{
         margin-top: 2%;
         width:100%;
@@ -90,6 +118,46 @@
                 background-color: var(--secondary-color);
                 padding: 0.5% 1%;
                 border-radius: 5px;
+            }
+        }
+    }
+
+    .other_images{
+        width: 100%;
+        height: 20%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 5%;
+        .title{
+            width: 100%;
+            height: 20%;
+            display: flex;
+            justify-content: start;
+            h3{
+                font-size: 1.5rem;
+                font-weight: bold;
+                color: var(--dark-blue-grey);
+                font-family: "Manrope", sans-serif;
+            }
+        }
+        .layout{
+            width: 100%;
+            height: 80%;
+            display: flex;
+            gap: 5%;
+            flex-wrap: wrap;
+            flex-direction: row;
+            align-items: start;
+            .image{
+                height: 100%;
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    border-radius: 10px;
+                }
             }
         }
     }
