--- a/public/css/travel/offers.css
+++ b/public/css/travel/offers.css
@@ -281,11 +281,15 @@
                     width: 100%;
                     .profile_picture{
                         width: 20%;
-                        height: 100%;
+                        padding: 1%;
+                        height: 80%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
                         img{
-                            width: 100%;
-                            height: 100%;
-                            object-fit: cover;
+                            max-width: 100%;
+                            max-height: 100%;
+                            object-fit: fill;
                             border-radius: 50%;
                         }
                     }
