ajout d'option dans le profil en fonction du type de compte + modification de quelques visuelles + backoffice ajout d'action lié au support + nouvelle route

--- a/public/css/prestation/main_prestation.css
+++ b/public/css/prestation/main_prestation.css
@@ -28,6 +28,7 @@ img{
         border-radius: 15px;
         border-collapse: separate;
         .card{
+            border: none;
             height: 100%;
             width: 100%;
             display: flex;
