--- a/public/css/prestation/reservation_prestation.css
+++ b/public/css/prestation/reservation_prestation.css
@@ -1,10 +1,19 @@
 @import "../var.css";
 
-.container {
+.container_layout {
     width: 100%;
     height: 100%;
     padding: 2% 5%;
     overflow: auto;
+}
+
+.calendar{
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 form{
