--- a/public/css/profile/management_prestation.css
+++ b/public/css/profile/management_prestation.css
@@ -6,6 +6,24 @@
     align-items: center;
     justify-content: center;
     margin-top: 50px;
+    width: 100%;
+    height: 100%;
+}
+
+.title{
+    width: 100%;
+    height: 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    h1 {
+        font-size: 1.5em;
+        color: var(--primary-color);
+        font-family: Maitree, sans-serif;
+    }
+
 }
 
 .list_receipts{
@@ -13,5 +31,139 @@
     height: 100%;
     padding: 1%;
     overflow: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+
+
+.receipt{
+    width: 30%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1%;
+    margin: 1%;
+    border-radius: 5px;
+
+    background-color: var(--white);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.58);
+
+    a{
+        text-decoration: none;
+        color: var(--opposite-color);
+    }
+
+    .receipt_title{
+        width: 100%;
+        height: 10%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+
+        h2 {
+            font-size: 1.2em;
+            color: var(--primary-color);
+            font-family: Maitree, sans-serif;
+        }
+    }
+
+    .receipt_content{
+        width: 100%;
+        height: 70%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+
+
+        form{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            .receipt_info{
+                width: 100%;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+                margin-bottom: 5%;
+
+                p,input{
+                    font-size: 1em;
+                    color: var(--dark-blue-grey);
+                    font-family: Inter, sans-serif;
+
+                }
+                input{
+                    width: 60%;
+                    border: none;
+                    border-bottom: var(--secondary-color) 1px solid;
+                }
+                textarea{
+                    width: 60%;
+                    height: 50%;
+                    border: none;
+                    border-bottom: var(--secondary-color) 1px solid;
+                }
+            }
+
+            input[type="submit"]{
+                width: 65%;
+                height: 25%;
+                padding: 1%;
+                border: none;
+                border-radius: 5px;
+                background-color: var(--action-color-good);
+                color: var(--white);
+                font-size: 1em;
+                font-family: Manrope, sans-serif;
+                cursor: pointer;
+            }
+        }
+    }
+
+    .receipt_footer{
+        width: 100%;
+        height: 30%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        form{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            input{
+                width: 50%;
+                height: 50%;
+                padding: 1%;
+                border: none;
+                border-radius: 5px;
+                background-color: var(--primary-color);
+                color: var(--white);
+                font-size: 1em;
+                font-family: Manrope, sans-serif;
+                cursor: pointer;
+            }
+            input[data-css="non"]{
+                background-color: var(--action-color-bad);
+            }
+        }
+    }
 
 }
