--- a/public/css/message/main_message.css
+++ b/public/css/message/main_message.css
@@ -1,3 +1,43 @@
+@import "../var.css";
+
+
+.container-fluid{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+}
+.row{
+    height: 100%;
+    overflow: auto;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+#messages {
+    flex-grow: 1;
+    overflow-y: auto;
+    border: 1px solid #ccc;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+.message-item {
+    border: 1px solid #ddd;
+    margin-bottom: 5px;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.send-message-container {
+    display: flex;
+    gap: 10px;
+}
+
 .message {
     padding: 5px 20px;
     margin: 5px 0;
@@ -5,7 +45,7 @@
     color: white;
     max-width: 80%;
     position: relative;
-    display: flex; 
+    display: flex;
     height: 90%;
     max-height: 15%;
     flex-direction: column;
@@ -19,25 +59,25 @@
     overflow-x: hidden;
 }
 .message-content {
-    display: block; 
+    display: block;
     word-wrap: break-word;
 }
 
 .message-date {
-    display: block; 
-    color: #ddd; 
-    font-size: 0.8em; 
-    margin-top: 5px; 
+    display: block;
+    color: #ddd;
+    font-size: 0.8em;
+    margin-top: 5px;
 }
 
 .left {
-    background-color: #007bff;
+    background-color: rgba(60, 104, 149, 0.87);
     text-align: left;
     margin-right: auto;
 }
 
 .right {
-    background-color: #28a745;
+    background-color: #34c154;
     text-align: right;
     margin-left: auto;
 }
